feat(portfolio-service): Complete test fixes and comprehensive API documentation
Test Fixes:
- Fixed PortfolioTaskScopeTest concurrent test (10/10 passing)
- Resolved flaky shouldHandleInterruptionGracefully() test
- Changed timing-dependent assertion to explicit state checking
- Added proper cancellation synchronization with .join()
- Implemented executor cleanup in finally block

Documentation Enhancements:
- Enhanced README.md with complete endpoint documentation (1406 lines)
- Added 13 Portfolio Management API endpoints with full details
- Added 10 Position Management API endpoints with examples
- Added 6 Internal Service APIs with authentication details
- Added 4 Health & Monitoring endpoints
- Included request/response JSON schemas for all endpoints
- Added curl command examples for all APIs
- Documented authentication requirements (JWT + Service API Key)

Test Status:
- Repository tests: 34/34 passing (100%)
- MCPPortfolioServerTest: All passing
- PortfolioTaskScopeTest: 10/10 passing
- Total: 45 tests passing

Portfolio Service Updates:
- Java 24 Virtual Threads integration complete
- Functional programming patterns implemented
- Circuit breaker patterns for external calls
- TradeMaster common library integration
- Kong API Gateway integration
- Consul service discovery configuration
- AgentOS capabilities implemented

Files Modified:
- README.md: Enhanced API documentation
- PortfolioTaskScopeTest.java: Fixed flaky concurrent test
- Plus 100+ files from previous portfolio-service work

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>